fixing uneven padding

--- a/components/Layout.module.css
+++ b/components/Layout.module.css
@@ -1,6 +1,6 @@
 .container {
   width: 100vw;
-  padding: 0 10rem;
+  padding: 0 10vw;
   margin: 2rem 0;
 }
 
