--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,6 +1,5 @@
 .container {
   min-width: 32.5rem;
-  padding: 0 0.5rem;
   margin-top: 2rem;
   display: flex;
   flex-direction: column;
@@ -42,11 +41,11 @@
   margin: 0;
 }
 
-@media (max-width: 585px) {
+/* @media (max-width: 585px) {
   .bio-container h1 {
     font-size: 28px;
   }
   .bio-container p {
     font-size: 14px;
   }
-}
+} */
